@@ -1,8 +1,7 @@
-package org.trustify.operator.cdrs.v2alpha1.api;
+package org.trustify.operator.cdrs.v2alpha1.server;
 
 import io.fabric8.kubernetes.api.model.networking.v1.Ingress;
 import io.fabric8.kubernetes.api.model.networking.v1.IngressTLS;
-import io.fabric8.kubernetes.api.model.networking.v1.IngressTLSBuilder;
 import io.javaoperatorsdk.operator.api.reconciler.Context;
 import io.javaoperatorsdk.operator.api.reconciler.dependent.DependentResource;
 import io.javaoperatorsdk.operator.processing.dependent.kubernetes.KubernetesDependent;
@@ -12,14 +11,13 @@ import org.trustify.operator.cdrs.v2alpha1.Trustify;
 import org.trustify.operator.cdrs.v2alpha1.TrustifySpec;
 import org.trustify.operator.utils.CRDUtils;
 
-import java.util.Collections;
 import java.util.Map;
 
-@KubernetesDependent(labelSelector = ApiIngressSecure.LABEL_SELECTOR, resourceDiscriminator = ApiIngressSecureDiscriminator.class)
+@KubernetesDependent(labelSelector = ServerIngress.LABEL_SELECTOR, resourceDiscriminator = ServerIngressDiscriminator.class)
 @ApplicationScoped
-public class ApiIngressSecure extends ApiIngressBase {
+public class ServerIngress extends ServerIngressBase {
 
-    public static final String LABEL_SELECTOR = "app.kubernetes.io/managed-by=trustify-operator,component=server,component-variant=https";
+    public static final String LABEL_SELECTOR = "app.kubernetes.io/managed-by=trustify-operator,component=server,component-variant=http";
 
     @Override
     @SuppressWarnings("unchecked")
@@ -30,15 +28,17 @@ public class ApiIngressSecure extends ApiIngressBase {
                 getIngressName(cr),
                 Map.of(
                         "component", "server",
-                        "component-variant", "https"
+                        "component-variant", "http"
                 ),
-                Collections.emptyMap()
+                Map.of(
+                        "console.alpha.openshift.io/overview-app-route", "true"
+                )
         );
     }
 
     @Override
-    public boolean isMet(DependentResource<Ingress, Trustify> dependentResource, Trustify primary, Context<Trustify> context) {
-        return context.getSecondaryResource(Ingress.class, new ApiIngressSecureDiscriminator())
+    public boolean isMet(DependentResource<Ingress, Trustify> dependentResource, Trustify cr, Context<Trustify> context) {
+        return context.getSecondaryResource(Ingress.class, new ServerIngressDiscriminator())
                 .map(in -> {
                     final var status = in.getStatus();
                     if (status != null) {
@@ -68,19 +68,14 @@ public class ApiIngressSecure extends ApiIngressBase {
 
     @Override
     protected IngressTLS getIngressTLS(Trustify cr) {
-        String tlsSecretName = CRDUtils.getValueFromSubSpec(cr.getSpec().httpSpec(), TrustifySpec.HttpSpec::tlsSecret)
-                .orElse(null);
-
-        return new IngressTLSBuilder()
-                .withSecretName(tlsSecretName)
-                .build();
+        return null;
     }
 
     public static String getIngressName(Trustify cr) {
-        return cr.getMetadata().getName() + Constants.INGRESS_SECURE_SUFFIX;
+        return cr.getMetadata().getName() + Constants.INGRESS_SUFFIX;
     }
 
     public static String getOpenshiftHostname(Trustify cr, String namespace, String domain) {
-        return "secure-" + namespace + "-" + cr.getMetadata().getName() + "." + domain;
+        return namespace + "-" + cr.getMetadata().getName() + "." + domain;
     }
 }
